# Laajavab_Boutique

./: .gitignore  README.md  TESTING_SUPPLIER_ORDER_FLOW.md  forecasting_requirements.txt  pyproject.toml  pyrightconfig.json  requirements.txt
alteration/: admin.py  ai_service.py  apps.py  customer_urls.py  models.py  serializers.py  tailor_urls.py  urls.py  views.py
alteration/migrations/: 0001_initial.py  0002_customer_tailor_remove_alteration_contact_number_and_more.py  0003_rename_item_description_alteration_issue_description_and_more.py
api/: urls.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_outfittype.py
core/templates/: base.html
digital_boutique/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
digital_boutique/digital_boutique/: settings.py  urls.py
forecasting/: apps.py  models.py  services.py  urls.py  views.py
inventory/: admin.py  models.py  serializers.py  views.py
inventory/migrations/: 0001_initial.py
sku/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
sku/migrations/: 0001_initial.py  0002_productsku_barcode_image_productsku_outfit_type_and_more.py  0003_alter_productsku_sku_code.py  0004_productsku_order_productsku_supplier_and_more.py
supplier/: admin.py  models.py  serializers.py  urls.py  views.py
supplier/migrations/: 0001_initial.py  0002_alter_order_id.py  0003_remove_order_order_sku.py  0004_purchaseorder_purchaseorderitem_secureorderlink_and_more.py  0005_purchaseorder_is_discrepancy.py  (+1 more)
templates/admin/: index.html
(+33 files in other folders)
